Fix app overflow issue

--- a/themes/default/app.scss
+++ b/themes/default/app.scss
@@ -9,28 +9,14 @@
 }
 
 body {
-    overflow: hidden;
-
     @media (min-width: 4000px) {
       font-size: 1.5em;
-    }
-
-    @media print {
-        overflow: visible;
     }
 }
 
 #app {
     overflow-x: hidden;
     height: 100vh;
-
-    &.home {
-        overflow: hidden;
-
-        @media print {
-            overflow: visible;
-        }
-    }
 
     &.scroll-lock {
         pointer-events: none;
